# 42SH.EPITA.ING1.S5

./: .gitignore  .gitlab-ci.yml  42sh  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure.ac  configure~  coverage.sh  create_branch.sh  debug.sh  epita_git_push.sh
.gitlab/: Makefile
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
src/: 42sh  42sh.c  Makefile  Makefile.am  Makefile.in  main.c  test.c  test.h
src/.deps/: 42sh-42sh.Po
src/ast/: Makefile  Makefile.am  Makefile.in  ast.c  ast.h
src/ast/.deps/: libast_a-ast.Po
src/execution/: Makefile  Makefile.am  Makefile.in  builtins_bool.h  builtins_cd.c  builtins_cd.h  builtins_dot.h  builtins_echo.h  builtins_exit.h  builtins_export.c  builtins_export.h  builtins_loop.h  exec_dot.c  exec_echo.c  exec_exit.c  exec_false.c  exec_loop_commands.c  exec_true.c  execution.c  execution.h  execution_command_block.c  execution_command_block.h  execution_commands.c  execution_commands.h  execution_conditions.c  execution_conditions.h  execution_function.c  execution_function.h  execution_loop.c  execution_loop.h  execution_negation.c  execution_negation.h  execution_or_and.c  execution_or_and.h  execution_pipeline.c  execution_pipeline.h  execution_redir.c  execution_redir.h  execution_subshell.c  execution_subshell.h  (+2 more)
src/execution/.deps/: libexecution_a-exec_echo.Po  libexecution_a-exec_false.Po  libexecution_a-exec_true.Po  libexecution_a-execution.Po  libexecution_a-execution_command.Po  libexecution_a-execution_condition.Po
src/io/: Makefile  Makefile.am  Makefile.in  io.c  io.h
src/io/.deps/: libio_a-io.Po
src/lexer/: Makefile  Makefile.am  Makefile.in  lexer.c  lexer.h  lexer_internal.c  lexer_internal.h  token.c  token.h
src/lexer/.deps/: lexer.Po  token.Po
src/parser/: Makefile  Makefile.am  Makefile.in  parser.c  parser.h  parser_base.c  parser_base.h  parser_command.c  parser_command.h  parser_operator.c  parser_operator.h  parser_redir.h  parser_shell_command.c  parser_shell_command.h  parser_struct.c  parser_struct.h
src/parser/.deps/: libparser_a-parser.Po
src/utils/: HashMapFunc.c  HashMapFunc.h  Makefile  Makefile.am  Makefile.in  function.c  function.h  hashMap.c  hashMap.h  hashMapFunc.c  hashMapFunc.h  hashMapVar.c  hashMapVar.h  strings.c  strings.h  utils.c  utils.h  variable.c  variable.h  vector.c  vector.h  word.c  word.h  xmalloc.c  xmalloc.h
src/utils/.deps/: libutils_a-strings.Po  libutils_a-utils.Po
tests/: Makefile  Makefile.am  Makefile.in  input.txt  io_tests.c  run_tests.sh  strings_tests.c  sum_test.c  test.c  test_ast_execution.c  test_execution.c  test_io.c  test_lexer.c  test_utils.c  tests_parser.c  unit_tests  unit_tests-test_execution.gcda  unit_tests-test_execution.gcno  unit_tests-test_io.gcda  unit_tests-test_io.gcno
tests/.deps/: unit_tests-test_execution.Po  unit_tests-test_io.Po
tests/clang-check/: clang-check.sh
tests/functional_tests/: func_test_run.sh  func_tests.sh  test_builtin.sh  test_command.sh  test_command_block.sh  test_comments.sh  test_condition.sh  test_fails.sh  test_function.sh  test_loop.sh  test_pipeline.sh  test_quotes.sh  test_redirection.sh  test_script.sh  test_script_stdin.sh  test_subshell.sh
tests/functional_tests/dot_script/: simple_test.sh  variable_test.sh
tests/functional_tests/test_scripts/: command_substitution.sh  expand.sh  for_script.sh  function.sh  operations.sh  simple_script1.sh  simple_script2.sh  simple_script3.sh  subshell.sh  tough_var.sh  var_assignment.sh
